# alww-vprytz-project

./: 404.html  LICENSE  README.md  SPECIFICATION.md  index.html  mkdocs.yml  package-lock.json  sitemap.xml
.github/workflows/: docker-publish.yml  mkdocs.yml
api/: index.html
backend/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  prod.yml  update.sh
backend/sql/: add_measurement.sql  add_session.sql  add_user.sql  get_measurement.sql  get_measurement_by_id.sql  get_measurements.sql  get_session_by_token.sql  get_user.sql  get_user_by_email.sql  get_user_by_id.sql  get_users.sql  schema.sql
backend/src/: actions.rs  auth.rs  config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
docs/: api.md  index.md
mobile-app/: README.md  app.json  babel.config.js  eas.json  env.d.ts  package-lock.json  package.json  tsconfig.json
mobile-app/API/: fetch.ts
mobile-app/app/: [...missing].tsx  _layout.jsx  _layout.tsx  app.style.ts  index.tsx
mobile-app/app/(tabs)/: _layout.tsx  index.tsx  map.tsx  search.tsx
mobile-app/app/(tabs)/details/: [id].tsx
mobile-app/lib/components/: index.ts
mobile-app/lib/components/buildingDetails/tabs/: Tabs.tsx  tabs.style.ts
mobile-app/lib/components/common/header/: ScreenHeaderBtn.tsx  screenheader.style.ts
mobile-app/lib/components/home/modal/: Modal.tsx  (+1 more)
mobile-app/lib/components/networkTest/: NetworkTest.tsx
mobile-app/lib/constants/: icons.ts  images.ts
mobile-app/lib/utils/: index.ts
mobile-app/types/: env.d.ts
osqspeed-api/: Cargo.toml  Dockerfile
osqspeed-api/src/: main.rs
(+10 files in other folders)
