[package]
name = "osqspeed-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.13.1"
diesel = { version = "2", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
uuid = { version = "1", features = ["v4", "serde"] }
env_logger = "0.10"
log = "0.4"
