[package]
name = "osqspeed-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = "0.4.24"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
derive_more = "0.99.7"
dotenv = "0.15.0"
env_logger = "0.10.0"
oauth2 = "4.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.6", features = [ "with-chrono-0_4" ] }
